log
Wed 20 Mar 2024 05:13:04 PM UTC: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|5
total_score: 0/70
4f08a3f
Wed 20 Mar 2024 05:21:39 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:37: error: invalid application of ‘sizeof’ to incomplete type ‘List’
   47 |      L = (List *) realloc(L, sizeof(List));
      |                                     ^~~~
Compilation failed
400ecef
Wed 20 Mar 2024 05:21:55 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
af4d4d4
Wed 20 Mar 2024 05:22:08 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:37: error: invalid application of ‘sizeof’ to incomplete type ‘List’
   47 |      L = (List *) realloc(L, sizeof(List));
      |                                     ^~~~
Compilation failed
20653d7
Wed 20 Mar 2024 05:24:03 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:41: error: invalid application of ‘sizeof’ to incomplete type ‘List’
   47 |      L = (List *) realloc(L, i * sizeof(List));
      |                                         ^~~~
Compilation failed
9831dc7
Wed 20 Mar 2024 05:24:24 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:41: error: invalid application of ‘sizeof’ to incomplete type ‘struct List’
   47 |      L = (List *) realloc(L, i * sizeof(struct List));
      |                                         ^~~~~~
Compilation failed
96c16da
Wed 20 Mar 2024 05:25:10 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:41: error: invalid application of ‘sizeof’ to incomplete type ‘List’
   47 |      L = (List *) realloc(L, i * sizeof(List));
      |                                         ^~~~
Compilation failed
e418a58
Wed 20 Mar 2024 05:27:05 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|5
total_score: 0/70
36e706a
Wed 20 Mar 2024 05:34:32 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
8099c99
Wed 20 Mar 2024 05:34:46 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
e3e5eed
Wed 20 Mar 2024 05:43:12 PM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:63:9: error: unused variable ‘elem’ [-Werror=unused-variable]
   63 |    int *elem = first(L);
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
4083a31
Wed 20 Mar 2024 05:43:28 PM UTC: 
 exercises.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  0|5
total_score: 0/70
8a3b919
Wed 20 Mar 2024 05:43:50 PM UTC: 
 exercises.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:63:9: error: unused variable ‘elem’ [-Werror=unused-variable]
   63 |    int *elem = first(L);
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
aaf583e
Wed 20 Mar 2024 05:44:04 PM UTC: 
 exercises.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
 tests:  1|4
total_score: 10/70
d57e24d
Wed 20 Mar 2024 05:46:26 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
e82e9c6
Wed 20 Mar 2024 05:53:42 PM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
493e5ce
Wed 20 Mar 2024 06:05:50 PM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:97:10: error: unused variable ‘pilaAux’ [-Werror=unused-variable]
   97 |   Stack *pilaAux = create_stack();
      |          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e812f4a
Wed 20 Mar 2024 06:06:03 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fd9b90b
Wed 20 Mar 2024 06:06:40 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:99:9: error: ‘elem’ undeclared (first use in this function)
   99 |   while(elem != NULL){
      |         ^~~~
exercises.c:99:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
a17974a
Wed 20 Mar 2024 06:06:53 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
dc68af5
Wed 20 Mar 2024 06:07:46 PM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  4|1
total_score: 50/70
4a08f0f
Wed 20 Mar 2024 06:14:52 PM UTC: 
 exercises.c | 34 +++++++++++++++++++++++++++++++++-
 1 file changed, 33 insertions(+), 1 deletion(-)
 tests:  0|0
35c14e7
